--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -5,6 +5,8 @@ name: simple-workflow
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
+  schedule:
+    - cron: '*/1 * * * *'
   push:
     branches: [ "main" ]
   pull_request:
